updated module gwlb, gwlb_endpoint and fgt_config to support GWLB config and deploy, new examples added

--- a/modules/fgt_config/templates/fgt_all.conf
+++ b/modules/fgt_config/templates/fgt_all.conf
@@ -115,6 +115,10 @@ ${config_faz}
 ${config_s2s}
 %{ endif }
 
+%{ if config_gwlb != "" }
+${config_gwlb}
+%{ endif }
+
 %{ if config_extra != "" }
 ${config_extra}
 %{ endif }
