added new modules and examples

--- a/modules/fgt_config/templates/fgt_vpn.conf
+++ b/modules/fgt_config/templates/fgt_vpn.conf
@@ -13,7 +13,13 @@ set localid ${local_id}
 set network-overlay enable
 set network-id ${network_id}
 %{ endif }
+%{ if local_gw != "" }
+set local-gw ${local_gw}
+%{ endif }
 set dpd on-idle
+%{ if fgsp_sync }
+set fgsp-sync enable
+%{ endif }
 set auto-discovery-sender enable
 %{ if mode_cfg }
 set net-device disable
