--- a/modules/fgt_config/templates/fgt_sdwan.conf
+++ b/modules/fgt_config/templates/fgt_sdwan.conf
@@ -38,11 +38,18 @@ set auto-negotiate enable
 next
 end
 
+config system interface
+edit "${hub_ipsec_id}"
+set allowaccess ping
+next
+end
+
 %{ if site_private_ip != "" }
 config system interface
 edit "${hub_ipsec_id}"
 set ip ${site_private_ip} 255.255.255.255
 set remote-ip ${hub_private_ip} 255.255.255.0
+set allowaccess ping
 next
 end
 %{ endif }
